# ldk-server

./: README.md
contrib/: ldk-server-config.toml
docs/: api-guide.md  configuration.md  operations.md
e2e-tests/: Cargo.toml
e2e-tests/src/: lib.rs
e2e-tests/tests/: e2e.rs
ldk-server/: Cargo.toml  ldk-server-config.toml
ldk-server-cli/src/: main.rs
ldk-server-client/src/: client.rs
ldk-server-grpc/src/: api.rs  endpoints.rs
ldk-server-grpc/src/proto/: api.proto
ldk-server-mcp/src/tools/: handlers.rs  mod.rs  schema.rs
ldk-server-mcp/tests/: integration.rs
ldk-server-protos/src/: api.rs  endpoints.rs
ldk-server/src/: grpc.rs  main.rs  service.rs
ldk-server/src/api/: bolt11_claim_for_hash.rs  bolt11_fail_for_hash.rs  bolt11_receive.rs  bolt11_receive_for_hash.rs  bolt11_receive_via_jit_channel.rs  bolt11_send.rs  bolt12_receive.rs  bolt12_send.rs  close_channel.rs  connect_peer.rs  decode_invoice.rs  decode_offer.rs  disconnect_peer.rs  error.rs  export_pathfinding_scores.rs  get_balances.rs  get_node_info.rs  get_payment_details.rs  graph_get_channel.rs  graph_get_node.rs  graph_list_channels.rs  graph_list_nodes.rs  list_channels.rs  list_forwarded_payments.rs  list_payments.rs  list_peers.rs  onchain_receive.rs  onchain_send.rs  open_channel.rs  sign_message.rs  splice_channel.rs  spontaneous_send.rs  unified_send.rs  update_channel_config.rs  verify_signature.rs
ldk-server/src/util/: config.rs  proto_adapter.rs  tls.rs
