[package]
name = "e2e-tests"
version = "0.1.0"
authors = ["benthecarman <benthecarman@live.com>", "Elias Rohrer <dev@tnull.de>"]
homepage = "https://lightningdevkit.org/"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.85"
description = "End-to-end tests for LDK Server."
repository = "https://github.com/lightningdevkit/ldk-server/"
readme = "../README.md"
keywords = ["bitcoin", "lightning", "ldk", "server"]
categories = ["cryptography::cryptocurrencies"]
publish = false

[dependencies]
corepc-node = { version = "0.10", features = ["download", "29_0"] }
tempfile = "3"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "time"] }
ldk-server-client = { path = "../ldk-server-client" }
ldk-server-grpc = { path = "../ldk-server-grpc", features = ["serde"] }
serde_json = "1.0"
hex-conservative = { version = "0.2", features = ["std"] }
ldk-node = { git = "https://github.com/lightningdevkit/ldk-node", rev = "056447c28221be02c3d39f8c6ae430a67ebbd850" }
